@@ -25,7 +25,7 @@ Imports:
     grid,
     gtable (>= 0.1.1),
     reshape2,
-    scales (>= 0.2.3),
+    scales (>= 0.2.5),
     proto,
     MASS
 Suggests:
