@@ -32,14 +32,18 @@
 #' d + scale_colour_brewer(type = "seq")
 #' d + scale_colour_brewer(type = "seq", palette = 3)
 #'
-#' d + scale_colour_brewer(palette = "Blues")
+#' d + scale_colour_brewer(palette = "Greens")
 #' d + scale_colour_brewer(palette = "Set1")
 #'
 #' # scale_fill_brewer works just the same as
 #' # scale_colour_brewer but for fill colours
-#' ggplot(diamonds, aes(x = price, fill = cut)) +
-#'   geom_histogram(position = "dodge", binwidth = 1000) +
-#'   scale_fill_brewer()
+#' p <- ggplot(diamonds, aes(x = price, fill = cut)) +
+#'   geom_histogram(position = "dodge", binwidth = 1000)
+#' p + scale_fill_brewer()
+#' # the order of colour can be reversed
+#' p + scale_fill_brewer(direction = -1)
+#' # the brewer scales look better on a darker background
+#' p + scale_fill_brewer(direction = -1) + theme_dark()
 #'
 #' # Generate map data
 #' library(reshape2) # for melt
@@ -54,41 +58,40 @@
 #' v + scale_fill_distiller(palette = 2)
 #' v + scale_fill_distiller(type = "div")
 #' v + scale_fill_distiller(palette = "Spectral")
-#' v + scale_fill_distiller(palette = "Spectral", trans = "reverse")
 #' v + scale_fill_distiller(type = "qual")
 #' # Not appropriate for continuous data, issues a warning
-scale_colour_brewer <- function(..., type = "seq", palette = 1) {
-  discrete_scale("colour", "brewer", brewer_pal(type, palette), ...)
+scale_colour_brewer <- function(..., type = "seq", palette = 1, direction = 1) {
+  discrete_scale("colour", "brewer", brewer_pal(type, palette, direction), ...)
 }
 
 #' @export
 #' @rdname scale_brewer
-scale_fill_brewer <- function(..., type = "seq", palette = 1) {
-  discrete_scale("fill", "brewer", brewer_pal(type, palette), ...)
+scale_fill_brewer <- function(..., type = "seq", palette = 1, direction = 1) {
+  discrete_scale("fill", "brewer", brewer_pal(type, palette, direction), ...)
 }
 
 #' @export
 #' @rdname scale_brewer
-scale_colour_distiller <- function(..., type = "seq", palette = 1, values = NULL, space = "Lab", na.value = "grey50", guide = "colourbar") {
+scale_colour_distiller <- function(..., type = "seq", palette = 1, direction = -1, values = NULL, space = "Lab", na.value = "grey50", guide = "colourbar") {
   # warn about using a qualitative brewer palette to generate the gradient
   type <- match.arg(type, c("seq", "div", "qual"))
   if (type == "qual") {
     warning("Using a discrete colour palette in a continuous scale.\n  Consider using type = \"seq\" or type = \"div\" instead", call. = FALSE)
   }
   continuous_scale("colour", "distiller",
-    gradient_n_pal(rev(brewer_pal(type, palette)(6)), values, space), na.value = na.value, guide = guide, ...)
+    gradient_n_pal(brewer_pal(type, palette, direction)(6), values, space), na.value = na.value, guide = guide, ...)
   # NB: 6 colours per palette gives nice gradients; more results in more saturated colours which do not look as good
 }
 
 #' @export
 #' @rdname scale_brewer
-scale_fill_distiller <- function(..., type = "seq", palette = 1, values = NULL, space = "Lab", na.value = "grey50", guide = "colourbar") {
+scale_fill_distiller <- function(..., type = "seq", palette = 1, direction = -1, values = NULL, space = "Lab", na.value = "grey50", guide = "colourbar") {
   type <- match.arg(type, c("seq", "div", "qual"))
   if (type == "qual") {
     warning("Using a discrete colour palette in a continuous scale.\n  Consider using type = \"seq\" or type = \"div\" instead", call. = FALSE)
   }
   continuous_scale("fill", "distiller",
-    gradient_n_pal(rev(brewer_pal(type, palette)(6)), values, space), na.value = na.value, guide = guide, ...)
+    gradient_n_pal(brewer_pal(type, palette, direction)(6), values, space), na.value = na.value, guide = guide, ...)
 }
 
 # icon.brewer <- function() {
