@@ -1,3 +1,7 @@
+* Add access to the new `direction` argument of `scales::brewer_pal` and
+  simplify changing the order of colours for `scale_*_brewer` and
+  `scale_*_distiller` (@jiho, #1139)
+
 ggplot2 1.0.1.9000
 ----------------------------------------------------------------
 
@@ -99,8 +103,8 @@ ggplot2 1.0.1
 
 * Fixes to pass `R CMD check --run-donttest` in R-devel.
 
-* Improvements in to order of colours and legend display of continuous colour
-  scales extracted from colorbrewer palettes in `scale_*_distiller()` (@jiho, 1076)
+* Improvements to order of colours and legend display for continuous colour
+  scales extracted from colorbrewer palettes by `scale_*_distiller()` (@jiho, 1076)
 
 ggplot2 1.0.0
 ----------------------------------------------------------------
